--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,7 +18,14 @@ set -g allow-passthrough on     # Allow programs in the pane to bypass tmux (e.g
 # set new prefix key
 set -g prefix C-b
 set -g prefix2 C-Space
+
 bind -n M-J switch-client -l 
+bind -n M-K switch-client -l 
+bind -n M-H previous-window 
+bind -n M-L next-window 
+
+bind -n C-M-h previous-window
+bind -n C-M-l next-window
 
 # Split horizontally in CWD with \
 unbind %
@@ -47,6 +54,8 @@ bind -r m resize-pane -Z
 # Enable vi mode to allow vim movements
 set-window-option -g mode-keys vi
 
+
+bind v copy-mode
 # Start selecting text with "v"
 bind-key -T copy-mode-vi 'v' send -X begin-selection 
 
